--- a/GV.DVDCentral.BL/GV.DVDCentral.BL.csproj
+++ b/GV.DVDCentral.BL/GV.DVDCentral.BL.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GV.DVDCentral.BL.Models\GV.DVDCentral.BL.Models.csproj" />
+    <ProjectReference Include="..\GV.DVDCentral.PL\GV.DVDCentral.PL.csproj" />
+  </ItemGroup>
+
 </Project>
