created controller and views,  and joined tables for the Movie Index view

--- a/GV.DVDCentral.UI/GV.DVDCentral.UI.csproj
+++ b/GV.DVDCentral.UI/GV.DVDCentral.UI.csproj
@@ -6,4 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GV.DVDCentral.BL.Models\GV.DVDCentral.BL.Models.csproj" />
+    <ProjectReference Include="..\GV.DVDCentral.BL\GV.DVDCentral.BL.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
+  </ItemGroup>
+
 </Project>
