coded utOrderItem and utOrderTests. Coded MovieController and added sidebar

--- a/GV.DVDCentral.BL.Test/GV.DVDCentral.BL.Test.csproj
+++ b/GV.DVDCentral.BL.Test/GV.DVDCentral.BL.Test.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\GV.DVDCentral.BL.Models\GV.DVDCentral.BL.Models.csproj" />
     <ProjectReference Include="..\GV.DVDCentral.BL\GV.DVDCentral.BL.csproj" />
+    <ProjectReference Include="..\GV.DVDCentral.DB\GV.DVDCentral.DB.sqlproj" />
   </ItemGroup>
 
 </Project>
